--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,22 @@
+# This Source Code Form is subject to the terms of the Mozilla Public
+# License, v. 2.0. If a copy of the MPL was not distributed with this
+# file, You can obtain one at https://mozilla.org/MPL/2.0/.
+
 [package]
 name = "banner_designer"
 version = "0.1.0"
+license = "MPL-2.0"
+authors = "Antikyth"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+wasm-bindgen="0.2.87"
+
+[dev-dependencies]
+wasm-bindgen-test = "0.3.37"
+
+[profile.release]
+# Optimise for small code size when building for release.
+opt-level = "s"
