--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,13 @@
 name = "banner_designer"
 version = "0.1.0"
 license = "MPL-2.0"
-authors = "Antikyth"
+authors = ["Antikyth"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[lib]
+crate-type=["cdylib", "rlib"]
 
 [dependencies]
 wasm-bindgen="0.2.87"
